continuing to try out some vibe coding. the results are interesting. some cool stuff and also a fair amount of issues.