@@ -8,7 +8,6 @@ import exceptions.ProductNotFoundException;
 import org.springframework.context.annotation.Bean;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
-import org.springframework.hateoas.server.mvc.WebMvcLinkBuilder;
 import org.springframework.web.bind.annotation.RestController;
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
@@ -18,11 +17,13 @@ import software.amazon.awssdk.services.dynamodb.model.GetItemResponse;
 import software.amazon.awssdk.services.dynamodb.model.PutItemRequest;
 import software.amazon.awssdk.services.dynamodb.model.ScanRequest;
 import software.amazon.awssdk.services.dynamodb.model.ScanResponse;
+import software.amazon.awssdk.services.dynamodb.model.DeleteItemRequest;
+import software.amazon.awssdk.services.dynamodb.model.UpdateItemRequest;
+import software.amazon.awssdk.services.dynamodb.model.UpdateItemResponse;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -63,11 +64,7 @@ public class AwsProductController {
                     Map<String, AttributeValue> item = response.item();
                     Product product = mapToProduct(item);
 
-                    return createResponse(200, convertToJson(
-                            EntityModel.of(product,
-                                    WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(ProductController.class).one(String.valueOf(product.getId()))).withSelfRel(),
-                                    WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(ProductController.class).all()).withRel("products"))
-                    ));
+                    return createResponse(200, convertToJson(product));
                 } catch (ProductNotFoundException e) {
                     return createResponse(404, e.getMessage());
                 } catch (Exception e) {
@@ -87,15 +84,12 @@ public class AwsProductController {
                     ScanResponse scanResponse = dynamoDb.scan(scanRequest);
                     List<Product> products = scanResponse.items().stream()
                             .map(this::mapToProduct)
-                            .collect(Collectors.toList());
+                            .toList();
 
                     CollectionModel<EntityModel<Product>> productModels = CollectionModel.of(
                             products.stream()
-                                    .map(product -> EntityModel.of(product,
-                                            WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(ProductController.class).one(product.getId())).withSelfRel(),
-                                            WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(ProductController.class).all()).withRel("products")))
-                                    .collect(Collectors.toList()),
-                            WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(ProductController.class).all()).withSelfRel());
+                                    .map(EntityModel::of)
+                                    .collect(Collectors.toList()));
 
                     return createResponse(200, convertToJson(productModels));
                 } catch (Exception e) {
@@ -117,11 +111,99 @@ public class AwsProductController {
 
                     dynamoDb.putItem(putRequest);
 
-                    EntityModel<Product> entityModel = EntityModel.of(newProduct,
-                            WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(ProductController.class).one(newProduct.getId())).withSelfRel(),
-                            WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(ProductController.class).all()).withRel("products"));
+                    EntityModel<Product> entityModel = EntityModel.of(newProduct);
 
                     return createResponse(201, convertToJson(entityModel));
+                } catch (Exception e) {
+                    return createResponse(500, "Internal server error: " + e.getMessage());
+                }
+            };
+        }
+
+        @Bean
+        public Function<APIGatewayProxyRequestEvent, APIGatewayProxyResponseEvent> removeProduct() {
+            return event -> {
+                try {
+                    Map<String, String> pathParams = event.getPathParameters();
+                    if (pathParams == null || !pathParams.containsKey("id")) {
+                        return createResponse(400, "Missing product id");
+                    }
+                    String productId = pathParams.get("id");
+
+                    DeleteItemRequest deleteRequest = DeleteItemRequest.builder()
+                            .tableName(tableName)
+                            .key(Map.of("id", AttributeValue.builder().s(productId).build()))
+                            .build();
+                    dynamoDb.deleteItem(deleteRequest);
+                    return createResponse(204, "");
+                } catch (Exception e) {
+                    return createResponse(500, "Internal server error: " + e.getMessage());
+                }
+            };
+        }
+
+        @Bean
+        public Function<APIGatewayProxyRequestEvent, APIGatewayProxyResponseEvent> addProduct() {
+            return event -> {
+                try {
+                    Product newProduct = parseProduct(event.getBody());
+                    PutItemRequest putRequest = PutItemRequest.builder()
+                            .tableName(tableName)
+                            .item(mapToAttributeValues(newProduct))
+                            .build();
+                    dynamoDb.putItem(putRequest);
+                    EntityModel<Product> entityModel = EntityModel.of(newProduct);
+                    return createResponse(201, convertToJson(entityModel));
+                } catch (Exception e) {
+                    return createResponse(500, "Internal server error: " + e.getMessage());
+                }
+            };
+        }
+
+        @Bean
+        public Function<APIGatewayProxyRequestEvent, APIGatewayProxyResponseEvent> updateProduct() {
+            return event -> {
+                try {
+                    Map<String, String> pathParams = event.getPathParameters();
+                    if (pathParams == null || !pathParams.containsKey("id")) {
+                        return createResponse(400, "Missing product id");
+                    }
+                    String productId = pathParams.get("id");
+                    Product updatedProduct = parseProduct(event.getBody());
+                    Map<String, AttributeValue> key = Map.of("id", AttributeValue.builder().s(productId).build());
+                    Map<String, String> expressionAttributeNames = new HashMap<>();
+                    Map<String, AttributeValue> expressionAttributeValues = new HashMap<>();
+                    StringBuilder updateExpression = new StringBuilder("set ");
+                    boolean first = true;
+                    if (updatedProduct.getName() != null && !updatedProduct.getName().isBlank()) {
+                        if (!first) updateExpression.append(", ");
+                        expressionAttributeNames.put("#name", "name");
+                        expressionAttributeValues.put(":name", AttributeValue.builder().s(updatedProduct.getName()).build());
+                        updateExpression.append("#name = :name");
+                        first = false;
+                    }
+                    if (updatedProduct.getPrice() != 0.0f) {
+                        if (!first) updateExpression.append(", ");
+                        expressionAttributeNames.put("#price", "price");
+                        expressionAttributeValues.put(":price", AttributeValue.builder().n(String.valueOf(updatedProduct.getPrice())).build());
+                        updateExpression.append("#price = :price");
+                        first = false;
+                    }
+                    if (expressionAttributeNames.isEmpty()) {
+                        return createResponse(400, "No valid fields to update");
+                    }
+                    UpdateItemRequest updateRequest = UpdateItemRequest.builder()
+                            .tableName(tableName)
+                            .key(key)
+                            .updateExpression(updateExpression.toString())
+                            .expressionAttributeNames(expressionAttributeNames)
+                            .expressionAttributeValues(expressionAttributeValues)
+                            .returnValues("ALL_NEW")
+                            .build();
+                    UpdateItemResponse updateResponse = dynamoDb.updateItem(updateRequest);
+                    Product product = mapToProduct(updateResponse.attributes());
+                    EntityModel<Product> entityModel = EntityModel.of(product);
+                    return createResponse(200, convertToJson(entityModel));
                 } catch (Exception e) {
                     return createResponse(500, "Internal server error: " + e.getMessage());
                 }
